--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <div class="about-content">
                 <div class="about-img">
-                    <img src="assets/src/img/Foto Monyet.png" alt="Foto Profil">
+                    <img src="assets/src/img/FotoMonyet.png" alt="Foto Profil">
                 </div>
                 <div class="about-text">
                     <h3>Web Developer</h3>
