fixing the imageeeeeeeeee

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <div class="about-content">
                 <div class="about-img">
-                    <img src="assets/src/img/FotoMonyet.png" alt="Foto Profil">
+                    <img src="assets/src/img/foto-monyet.png" alt="Foto Profil">
                 </div>
                 <div class="about-text">
                     <h3>Web Developer</h3>
@@ -102,7 +102,7 @@
                     </div>
                 </div>
                 <div class="skills-card">
-                    <img src="/assets/src/img/Lightroom.png" alt="Skills 3" class="skills-img">
+                    <img src="/assets/src/img/lightroom.png" alt="Skills 3" class="skills-img">
                     <div class="skills-info">
                         <h3>Lightroom</h3>
                     </div>
@@ -120,21 +120,21 @@
             </div>
             <div class="testimonials-grid">
                 <div class="testimonials-card">
-                    <img src="/assets/src/img/ThomYorke.png" alt="Client 1" class="testimonials-img">
+                    <img src="/assets/src/img/thom-yorke.png" alt="Client 1" class="testimonials-img">
                     <div class="testimonials-info">
                         <h3>Thom Yorke</h3>
                         <p>"Mulia is a very dedicated and talented student. His coding skills are impressive for his age."</p>
                     </div>
                 </div>
                 <div class="testimonials-card">
-                    <img src="/assets/src/img/Prabowo.png" alt="Client 2" class="testimonials-img">
+                    <img src="/assets/src/img/prabowo.png" alt="Client 2" class="testimonials-img">
                     <div class="testimonials-info">
                         <h3>Bapak Prabowo</h3>
                         <p>“Saya melihat sendiri kinerja ngoding saudara ini. Cepat, rapi, dan hasilnya luar biasa. Saya jarang kagum, tapi kali ini saya harus akui: ini kerja yang patut dihargai. Teruskan perjuanganmu!”</p>
                     </div>
                 </div>
                 <div class="testimonials-card">
-                    <img src="/assets/src/img/TenHag.png" alt="Client 3" class="testimonials-img">
+                    <img src="/assets/src/img/ten-hag.png" alt="Client 3" class="testimonials-img">
                     <div class="testimonials-info">
                         <h3>Erik ten Hag</h3>
                         <p>““He is phenomenal. The way he writes code, calm but lethal. His logic is clean, efficient, and he always delivers solutions when the team needs them. I’ve never seen a developer with such determination and vision. He is not only the future of this project… he is the future of technology.””</p>
